Started working on Java 8 backport