@@ -21,7 +21,8 @@ import static net.kyori.moonshine.util.Unit.UNIT;
 import static org.assertj.core.api.Assertions.assertThatCode;
 
 import io.leangen.geantyref.TypeToken;
-import java.util.Map;
+
+import java.util.Collections;
 import org.junit.jupiter.api.Test;
 
 class EmptyTest {
@@ -33,7 +34,7 @@ class EmptyTest {
             .rendered((receiver, intermediateMessage, resolvedPlaceholders, method, owner) -> UNIT)
             .sent((receiver, renderedMessage) -> {
             })
-            .resolvingWithStrategy((moonshine, receiver, intermediateText, moonshineMethod, parameters) -> Map.of())
+            .resolvingWithStrategy((moonshine, receiver, intermediateText, moonshineMethod, parameters) -> Collections.emptyMap())
             .create()
     ).doesNotThrowAnyException();
   }
